--- a/tmux.conf
+++ b/tmux.conf
@@ -17,12 +17,13 @@ set -g display-time 1000
 set -g message-style fg=black,bg=colour231
 
 # Status bar.
-set -g status-style fg=white,bg=colour234
-set -g status-left ''
-set -g status-right-style bg=colour64
-set -g status-right ' #S #[reverse] #H #[noreverse] %H:%M '
+set -g status-style fg=white,bg=colour236
+set -g status-left ' #S #[reverse] #H #[noreverse] %H:%M #[bg=colour236]  '
+set -g status-left-length 100
+set -g status-left-style bg=colour64
+set -g status-right ''
 set -g status-interval 6
-set -g status-justify centre
+set -g status-justify left
 setw -g window-status-format " #I.#W(#(tmux display-message -p '#{pane_tty}' | sed 's|^/dev/||' | sed 's/^ttys//'))#F "
 setw -g window-status-current-format " #I.#W(#(tmux display-message -p '#{pane_tty}' | sed 's|^/dev/||' | sed 's/^ttys//'))#F "
 setw -g window-status-bg default
