--- a/tmux.conf
+++ b/tmux.conf
@@ -18,14 +18,15 @@ set -g message-style fg=black,bg=colour231
 
 # Status bar.
 set -g status-style fg=white,bg=colour236
-set -g status-left ' #S #[reverse] #H #[noreverse] %H:%M #[bg=colour236]  '
+set -g status-left ' #S #[reverse] #H #[noreverse]#[bg=colour236]  '
 set -g status-left-length 100
 set -g status-left-style bg=colour64
-set -g status-right ''
-set -g status-interval 6
+set -g status-right ' #{pane_tty} #[reverse] %H:%M '
+set -g status-right-style bg=colour64
+set -g status-interval 20
 set -g status-justify left
-setw -g window-status-format " #I.#W(#(tmux display-message -p '#{pane_tty}' | sed 's|^/dev/||' | sed 's/^ttys//'))#F "
-setw -g window-status-current-format " #I.#W(#(tmux display-message -p '#{pane_tty}' | sed 's|^/dev/||' | sed 's/^ttys//'))#F "
+setw -g window-status-format "[#I] #W "
+setw -g window-status-current-format "#[reverse][#I]#[noreverse] #W "
 setw -g window-status-bg default
 setw -g window-status-current-style bold,bg=colour130
 
