--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set -s escape-time 200
+set -s escape-time 50
 
 if-shell 'which elvish' 'set -g default-command elvish'
 # Needed on macOS to make pb{copy,paste} work
@@ -30,7 +30,7 @@ setw -g window-status-current-format "#[reverse][#I]#[noreverse] #W "
 setw -g window-status-bg default
 setw -g window-status-current-style bold,bg=colour130
 
-set -g pane-active-border-fg colour72
+set -g pane-active-border-style fg=colour72,bg=colour72
 
 setw -g wrap-search off
 setw -g word-separators " -_@."
@@ -48,7 +48,7 @@ bind -T root M-= next-window
 bind -T root M-_ swap-window -t:-
 bind -T root M-+ swap-window -t:+
 bind -T root M-c split-window -h -c '#{pane_current_path}'
-bind -T root M-v split-window -v -c '#{pane_current_path}'
+bind -T root M-v split-window -v -b -c '#{pane_current_path}'
 bind -T root M-j select-pane -D
 bind -T root M-k select-pane -U
 bind -T root M-h select-pane -L
