Clean up tmux.conf and remove tmux.conf.local.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,12 +1,12 @@
 set -s escape-time 50
 
+# Set the default command to Elvish if available.
 if-shell 'which elvish' 'set -g default-command elvish'
 # Needed on macOS to make pb{copy,paste} work
 if-shell 'which reattach-to-user-namespace && which elvish' 'set -g default-command "reattach-to-user-namespace elvish"'
 
 set -g base-index 0
 set -g renumber-windows on
-set -g repeat-time 300
 set -g history-limit 65536
 set -g default-terminal screen-256color
 set -g visual-bell off
@@ -38,56 +38,70 @@ setw -g mode-keys vi
 setw -g xterm-keys on
 setw -g automatic-rename on
 
-bind -T root C-A send-prefix
+# Prefixless bindings.
 
-# Prefixless bindings
-bind -T root M-t new-window -c '#{pane_current_path}'
-bind -T root M-T new-window
-bind -T root M-- previous-window
-bind -T root M-= next-window
-bind -T root M-_ swap-window -t:-
-bind -T root M-+ swap-window -t:+
-bind -T root M-c split-window -h -c '#{pane_current_path}'
-bind -T root M-v split-window -v -b -c '#{pane_current_path}'
-bind -T root M-j select-pane -D
-bind -T root M-k select-pane -U
-bind -T root M-h select-pane -L
-bind -T root M-l select-pane -R
-bind -T root M-J resize-pane -D
-bind -T root M-K resize-pane -U
-bind -T root M-H resize-pane -L
-bind -T root M-L resize-pane -R
-bind -T root M-q confirm-before -p 'Kill pane?' kill-pane
-bind -T root M-r source ~/.tmux.conf \; display-message " Reloaded .tmux.conf"
-bind -T root M-PageUp copy-mode -u
-bind -T root M-PageDown copy-mode
-bind -T root M-\ copy-mode
+bind -n C-A send-prefix
+bind -n M-PageUp copy-mode -u
+bind -n M-PageDown copy-mode
 
-# Repeated, for the copy-mode-vi table
-bind -T copy-mode-vi M-t new-window -c '#{pane_current_path}'
-bind -T copy-mode-vi M-T new-window
-bind -T copy-mode-vi M-- previous-window
-bind -T copy-mode-vi M-= next-window
-bind -T copy-mode-vi M-_ swap-window -t:-
-bind -T copy-mode-vi M-+ swap-window -t:+
-bind -T copy-mode-vi M-c split-window -h -c '#{pane_current_path}'
-bind -T copy-mode-vi M-v split-window -v -c '#{pane_current_path}'
-bind -T copy-mode-vi M-j select-pane -D
-bind -T copy-mode-vi M-k select-pane -U
-bind -T copy-mode-vi M-h select-pane -L
-bind -T copy-mode-vi M-l select-pane -R
-bind -T copy-mode-vi M-J resize-pane -D
-bind -T copy-mode-vi M-K resize-pane -U
-bind -T copy-mode-vi M-H resize-pane -L
-bind -T copy-mode-vi M-L resize-pane -R
-bind -T copy-mode-vi M-q confirm-before -p 'Kill pane?' kill-pane
-bind -T copy-mode-vi M-r source ~/.tmux.conf \; display-message "Reloaded .tmux.conf"
+# The majority of the prefixless bindings are use Alt and a character.
+bind -n M-t new-window -c '#{pane_current_path}'
+bind -n M-T new-window
+bind -n M-- previous-window
+bind -n M-= next-window
+bind -n M-_ swap-window -t:-
+bind -n M-+ swap-window -t:+
+bind -n M-c split-window -h -c '#{pane_current_path}'
+bind -n M-v split-window -v -b -c '#{pane_current_path}'
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-J resize-pane -D
+bind -n M-K resize-pane -U
+bind -n M-H resize-pane -L
+bind -n M-L resize-pane -R
+bind -n M-q confirm-before -p 'Kill pane?' kill-pane
+bind -n M-r source ~/.tmux.conf \; display-message " Reloaded .tmux.conf"
+bind -n M-\ copy-mode
 
-bind -T copy-mode-vi Up send-keys -X scroll-up
-bind -T copy-mode-vi Down send-keys -X scroll-down
+# This is the same as above, for iPad where the Alt key always functions as
+# Apple's flavor of AltGr.
+bind -n † new-window -c '#{pane_current_path}'
+bind -n ˇ new-window
+bind -n – previous-window
+bind -n ≠ next-window
+bind -n — swap-window -t:-
+bind -n ± swap-window -t:+
+bind -n ç split-window -h -c '#{pane_current_path}'
+bind -n √ split-window -v -c '#{pane_current_path}'
+bind -n ∆ select-pane -D
+bind -n ˚ select-pane -U
+bind -n ˙ select-pane -L
+bind -n ¬ select-pane -R
+bind -n Ô resize-pane -D
+bind -n  resize-pane -U
+bind -n Ó resize-pane -L
+bind -n Ò resize-pane -R
+bind -n œ confirm-before -p 'Kill pane?' kill-pane
+bind -n ® source ~/.tmux.conf \; display-message "Reloaded .tmux.conf"
+bind -n « copy-mode
 
-# I use a copy of xterm-256color as the putty terminfo. This makes up for the
-# inaccuracy.
-set -g terminal-overrides "putty:kf1=\e[11~:kf2=\e[12~:kf3=\e[13~:kf4=\e[14~:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
+# The following makes pressing Alt-{0-9} actually sends Meta-{0-9} instead of
+# the special characters on an iPad.
+bind -n ¡ send-keys M-1
+bind -n ™ send-keys M-2
+bind -n £ send-keys M-3
+bind -n ¢ send-keys M-4
+bind -n ∞ send-keys M-5
+bind -n § send-keys M-6
+bind -n ¶ send-keys M-7
+bind -n • send-keys M-8
+bind -n ª send-keys M-9
+bind -n º send-keys M-0
 
-source ~/.tmux.conf.local
+# In copy mode, bind up and down to scroll instead of moving cursor.
+bind -t vi-copy Up scroll-up
+bind -t vi-copy Down scroll-down
+
+if 'test -f ~/.tmux.conf.local' 'source ~/.tmux.conf.local'
