tmux.conf: Comment out window-status-bg.

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,7 +27,7 @@ set -g status-interval 20
 set -g status-justify left
 setw -g window-status-format "[#I] #W "
 setw -g window-status-current-format "#[reverse][#I]#[noreverse] #W "
-setw -g window-status-bg default
+#setw -g window-status-bg default
 setw -g window-status-current-style bold,bg=colour130
 
 set -g pane-active-border-style fg=colour72,bg=colour72
