--- a/tmux.conf
+++ b/tmux.conf
@@ -101,7 +101,7 @@ bind -n ª send-keys M-9
 bind -n º send-keys M-0
 
 # In copy mode, bind up and down to scroll instead of moving cursor.
-bind -t vi-copy Up scroll-up
-bind -t vi-copy Down scroll-down
+#bind -t vi-copy Up scroll-up
+#bind -t vi-copy Down scroll-down
 
 if 'test -f ~/.tmux.conf.local' 'source ~/.tmux.conf.local'
