tmux.conf: Uncomment and update the vi-copy bindings for Up and Down.

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,8 +25,8 @@ set -g status-right ' #{pane_tty} #[reverse] %H:%M '
 set -g status-right-style bg=colour64
 set -g status-interval 20
 set -g status-justify left
-setw -g window-status-format "[#I] #W "
-setw -g window-status-current-format "#[reverse][#I]#[noreverse] #W "
+setw -g window-status-format "[#I#{?window_zoomed_flag,#[reverse]Z#[noreverse],}] #W "
+setw -g window-status-current-format "#[reverse][#I#{?window_zoomed_flag,#[reverse]Z#[noreverse],}]#[noreverse] #W "
 #setw -g window-status-bg default
 setw -g window-status-current-style bold,bg=colour130
 
@@ -101,7 +101,7 @@ bind -n ª send-keys M-9
 bind -n º send-keys M-0
 
 # In copy mode, bind up and down to scroll instead of moving cursor.
-#bind -t vi-copy Up scroll-up
-#bind -t vi-copy Down scroll-down
+bind -T copy-mode-vi Up   send-keys -X scroll-up
+bind -T copy-mode-vi Down send-keys -X scroll-down
 
 if 'test -f ~/.tmux.conf.local' 'source ~/.tmux.conf.local'
