tmux.conf: Add binding for Alt-z to zoom.

--- a/tmux.conf
+++ b/tmux.conf
@@ -64,6 +64,7 @@ bind -n M-L resize-pane -R
 bind -n M-q confirm-before -p 'Kill pane?' kill-pane
 bind -n M-r source ~/.tmux.conf \; display-message " Reloaded .tmux.conf"
 bind -n M-\ copy-mode
+bind -n M-z resize-pane -Z
 
 # This is the same as above, for iPad where the Alt key always functions as
 # Apple's flavor of AltGr.
