tmux.conf: Enable mouse support.

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,7 @@ set -g history-limit 65536
 set -g default-terminal screen-256color
 set -g visual-bell off
 set -g set-titles on
+set -g mouse on
 
 # Message.
 set -g display-time 1000
