tmux.conf: Show PID; disable copy-mode binding.

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,7 @@ set -g status-style fg=white,bg=colour236
 set -g status-left ' #S #[reverse] #H #[noreverse]#[bg=colour236]  '
 set -g status-left-length 100
 set -g status-left-style bg=colour64
-set -g status-right ' #{pane_tty} #[reverse] %H:%M '
+set -g status-right ' #{pane_pid}@#{pane_tty} #[reverse] %H:%M '
 set -g status-right-style bg=colour64
 set -g status-interval 20
 set -g status-justify left
@@ -64,7 +64,7 @@ bind -n M-H resize-pane -L
 bind -n M-L resize-pane -R
 bind -n M-q confirm-before -p 'Kill pane?' kill-pane
 bind -n M-r source ~/.tmux.conf \; display-message " Reloaded .tmux.conf"
-bind -n M-\ copy-mode
+#bind -n M-\ copy-mode
 bind -n M-z resize-pane -Z
 
 # This is the same as above, for iPad where the Alt key always functions as
