--- a/tmux.conf
+++ b/tmux.conf
@@ -50,8 +50,8 @@ bind -n M-t new-window -c '#{pane_current_path}'
 bind -n M-T new-window
 bind -n M-- previous-window
 bind -n M-= next-window
-bind -n M-_ swap-window -t:-
-bind -n M-+ swap-window -t:+
+bind -n M-_ swap-window -d -t:-
+bind -n M-+ swap-window -d -t:+
 bind -n M-c split-window -h -c '#{pane_current_path}'
 bind -n M-v split-window -v -b -c '#{pane_current_path}'
 bind -n M-j select-pane -D
